--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,4 +1,9 @@
+{% extends "layout.html" %}
+{% block content %}
 <h1>Post</h1>
 <h2>{{post.title}}</h2>
-<p>{{post.description|striptags}}</p>
+<p>{{post.date}}</p>
+<p>{{post.description|safe}}</p>
+
 <img src="{{post.image.url}}" alt="{{post.title}}">
+{% endblock %}
