--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,5 +1,11 @@
+{% extends "layout.html" %}
+
+{% block content %}
+{% load static %}
 <h1>Welcome</h1>
 
+
+<img src="{% static 'portfolio/photo-1511367461989-f85a21fda167.jpg'%}" alt="">
 <!-- Itera en el objecto projects que viene desde views.py -->
 {% for project in projects %}
 
@@ -10,3 +16,5 @@
 <a href="{{project.url}}">{{project.url}}</a>
 {% endif %}
 {% endfor %}
+
+{% endblock %}
