--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,9 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Post</h1>
-<h2>{{post.title}}</h2>
-<p>{{post.date}}</p>
-<p>{{post.description|safe}}</p>
+<div class="text-center">
+    <h2>{{post.title}}</h2>
+<h3 class="my-2 h5 text-muted">{{post.date|date:"F jS, Y"}}</h3>
 
-<img src="{{post.image.url}}" alt="{{post.title}}">
+<img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid img-post-detail">
+
+<div class="my-4">
+    <p>{{post.description|safe}}</p>
+</div>
+</div>
+
+
+
+
 {% endblock %}
