Mejoras menores para fotos de proyecto

--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -7,7 +7,7 @@
         <img src="{% static 'portfolio/foto_perfil.jpg'%}" alt="">
     </div>
     <div class="col-md-8 my-auto">
-        <h1>Hi, I am <strong>Ryan Ray</strong></h1>
+        <h1>Hi, I am <strong>Luciano Cabrales</strong></h1>
         <h3>I am a Python FullStack developer</h3>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam laudantium, repudiandae, quae repellat et
